fix the wrapping text

--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -57,7 +57,10 @@ h1{
 .image-small{
     width: 250px;
     height: 250px;
-    margin: auto;
+    margin-top: 0px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
     float: left;
 }
 
